--- a/agentschema/tspconfig.yaml
+++ b/agentschema/tspconfig.yaml
@@ -12,7 +12,7 @@ options:
     root-object: "AgentSchema.Core.AgentManifest"
     emit-targets:
       - type: markdown
-        output-dir: "../docs"
+        output-dir: "../docs/src/content/docs/reference"
       - type: CSharp
         output-dir: "../runtime/csharp/AgentSchema.Core/Model"
         test-dir: "../runtime/csharp/AgentSchema.Core.Tests/Model"
