fix: update publish workflow to enable trusted publishing and set environment permissions

--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -84,6 +84,13 @@ jobs:
     # Only publish on release events (not manual workflow_dispatch)
     if: github.event_name == 'release'
 
+    environment:
+      name: pypi
+      url: https://pypi.org/project/agentschema/
+
+    permissions:
+      id-token: write # Required for trusted publishing
+
     steps:
       - name: Download distribution packages
         uses: actions/download-artifact@v4
@@ -97,6 +104,4 @@ jobs:
           version: "latest"
 
       - name: Publish to PyPI
-        run: uv publish dist/*
-        env:
-          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        run: uv publish dist/* --trusted-publishing always
