--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -84,9 +84,6 @@ jobs:
     # Only publish on release events (not manual workflow_dispatch)
     if: github.event_name == 'release'
 
-    permissions:
-      id-token: write # Required for trusted publishing
-
     steps:
       - name: Download distribution packages
         uses: actions/download-artifact@v4
@@ -98,5 +95,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: dist/
-          attestations: false
-          verbose: true
+          password: ${{ secrets.PYPI_API_TOKEN }}
